force-app/main/default/objects/vlocity_cmt__PartyMergeMetadata__c/fields/vlocity_cmt__CustomImplementationClassName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CustomImplementationClassName__c</fullName>
    <label>Custom Implementation Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>