force-app/main/default/objects/vlocity_cmt__PartyMergeMetadata__c/fields/vlocity_cmt__LookupIdField__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__LookupIdField__c</fullName>
    <label>Lookup Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>