force-app/main/default/objects/vlocity_cmt__PartyMergeMetadata__c/fields/vlocity_cmt__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>